   * make the cave in 'An Island' (MP) be 'underground'
   * enlarge side descriptions for remote player during game creation
 * theme syntax improvements:
   * added support for specifying a reference rectangle when using 
     relative-positioning syntax
   * added support for theme inheritance, to avoid duplicating mostly-unchanged
     code
 * updated unix manpages
 * "," is no longer the column separator, it does not have to be escaped
   anymore in some translations, "=" is the new separator (#10368)
 * clarify some ability descriptions
 * remove drain allowing to go past maximum hp
 * remove long-range attacks
   (Pirate Galleon, Transport Galleon, Wall Guard, Watch Tower)
 * fixed various bugs with respect to multiplayer game setup
   (#10896, #11236, #11265, #11442, #11527)
 * fixed pathfinding bug (#11196)
 * fixed untranslatable strings
 * fixed "damage inflicted" statistic (incorrectly computed when defending)
 * fixed missing diagonal projectiles on many units
 * fixed {CROSS} in 'Temple of the Deep'
 * fixed the description of the 'Ghost'
 * remove obsolete tools: make_translation merge_translations
 * remove obsolete id= for messages in TRoW & HttT
 * remove old unused images:
   * time-of-day
 * code cleanups
 * added a wesnoth "fortunes" file

Version 0.8.8:
 * campaign server stores size of campaigns
 * user interface improvements:
   * consistently compute minimum allowed zoom value according to screen size
   * improved readability of chat messages on light backgrounds (#10900)
 * made it possible to move and attack with a single click
 * graphics improvements: 
   * portraits for all TRoW characters that speak in more than one scenario added
   * a portrait for Queen Asheviere in HttT
   * hotseat and vs AI multiplayer icons
   * new or modified unit images: orcish warlord, soul shooter, bone shooter
   * preparations for mountain and desert village graphics
   * new attack icons: bone arrow stab, cleaver, morning star, crush